# graphics_coursework

./: CMakeLists.txt  CShader.cpp  CShader.h  CoasterTrack.cpp  CoasterTrack.h  GlmMaths.h  InputManager.cpp  InputManager.h  Light.h  README.md  Scene.cpp  Scene.h  SceneData.cpp  SceneData.h  Shader.cpp  Shader.h  glm_maths.cpp  glm_maths.h  main.cpp  scene_config.json
3dStruct/: threeDModel.cpp  threeDModel.h
Box/: Box.cpp  Box.h
Images/: ImageLoading.cpp  ImageLoading.h
Octree/: Octree.cpp  Octree.h
Structures/: Vector3d.cpp
TextureHandler/: TextureHandler.cpp  TextureHandler.h
config/: default_coaster.json  objects.json  scene_config.json  tracks.json
config/materials/: grass.json  model.json  sky.json
config/models/: cart.json  left.json  loop.json  pine_tree.json  right.json  step_down.json  step_up.json  straight.json
config/objects/: grass.json  sky.json
config/shaders/: cuboid.json  model.json
config/tracks/: left.json  loop.json  right.json  step_down.json  step_up.json  straight.json
example_coasters/: example_1.json  example_2.json
glsl_files/: basic.frag  basicTransformations.frag
glslfiles/: basic.vert  basicTransformations.frag  basicTransformations.vert
models/rollercoaster_models/carts/: white-front.mtl
models/trees/pine_tree/: pine_tree.mtl
objects/: Cart.cpp  Cart.h  Cube.cpp  Cube.h  Cuboid.cpp  Cuboid.h  MeshObject.cpp  MeshObject.h  ModelObject.cpp  ModelObject.h  SceneObject.cpp  SceneObject.h
